<resources>
    <string name="app_name">5 Rings</string>
    <string name="personaje">Personaje</string>
    <string name="campaña">Campaña</string>
    <string name="nuevo_personaje">Nuevo Personaje</string>
    <string name="lista_personajes">Lista Personajes</string>
    <string name="title_activity_creacion_personaje">CreacionPersonaje</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="atributo">Atributo</string>
    <string name="fisicos">Fisicos</string>
    <string name="fuerza">Fuerza</string>
    <string name="resistencia">Resistencia</string>
    <string name="reflejos">Reflejos</string>
    <string name="agilidad">Agilidad</string>
    <string name="restaBoton">-</string>
    <string name="_2">2</string>
    <string name="puntos_disponibles">Puntos Disponibles</string>
    <string name="_0">0</string>
    <string name="_30">30</string>
    <string name="mentales">Mentales</string>
    <string name="voluntad">Voluntad</string>
    <string name="percepci_n">Percepción</string>
    <string name="inteligencia">Inteligencia</string>
    <string name="conciencia">Conciencia</string>
    <string name="otros">Otros</string>
    <string name="puntos_de_trance">Puntos De Trance</string>
    <string name="berserker">Berserker</string>
    <string name="habilidades">Habilidades</string>
    <string name="cazar">Cazar</string>
    <string name="tradicion">Tradicion</string>
    <string name="guardar">Guardar</string>
    <string name="nombre_personaje">Nombre Personaje.....</string>
    <string name="historia">Historia</string>
    <string name="buscar_ingestigar">Buscar/Ingestigar</string>
    <string name="manejo_animales">Manejo Animales</string>
    <string name="bardo">Bardo</string>
    <string name="defensa_escudo">Defensa/Escudo</string>
    <string name="arma_1_mano">Arma 1 Mano</string>
    <string name="armas_2_manos">Armas 2 manos</string>
    <string name="armas_arcanas">Armas Arcanas</string>
    <string name="armas_especialista">Armas Especialista</string>
    <string name="arco">Arco</string>
    <string name="armas_arrojadizas">Armas Arrojadizas</string>
    <string name="lucha_combate">Lucha/Combate</string>
    <string name="comercio">Comercio</string>
    <string name="falsificar">Falsificar</string>
    <string name="forjar_armas">Forjar Armas</string>
    <string name="navegacion">Navegacion</string>
    <string name="juego">Juego</string>
    <string name="intimidar">Intimidar</string>
    <string name="supervivencia">Supervivencia</string>
    <string name="sigilo">Sigilo</string>
    <string name="trampas">Trampas</string>
    <string name="seduccion">Seduccion</string>
    <string name="venenos">Venenos</string>
    <string name="seguir_acechar">Seguir/Acechar</string>
    <string name="conocimiento_arcano">Conoc. Arcano</string>
    <string name="conocimiento_mundano">Conoc. Mundano</string>
    <string name="conocimiento_especifico">Conoc. Especifico</string>
    <string name="batalla">Batalla</string>
    <string name="mentir">Mentir</string>
    <string name="equitacion">Equitacion</string>
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="title_activity_editar_personaje">EditarPersonaje</string>
    <string name="mostrar">Mostrar</string>
    <string name="tirada_dado">tirada dado</string>



</resources>
