<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/portada"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/personajes"
        style="@style/Boton_Menu"
        android:text="@string/personaje"
        android:onClick="abrirOpcionesPersonaje"/>

    <Button
        android:id="@+id/campaña"
        style="@style/Boton_Menu"
        android:text="@string/campaña" />

    <Button
        android:id="@+id/tirada_dado"
        style="@style/Boton_Menu"
        android:text="@string/tirada_dado"
        android:onClick="abrirTiradaDado"/>

</LinearLayout>